<resources>
    <string name="app_name">AppBundleSample</string>
    <string name="app_slogan">AppBundle</string>
    <string name="button_goto_feature">Go to Module 1</string>
    <string name="button_goto_feature_2">Go to Module 2</string>
    <string name="button_download_feature">Install Module 1</string>
    <string name="button_download_feature_2">Install Module 2</string>
    <string name="download_success">Download Success</string>
    <string name="download_fail">Download Fail</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="installing">Installing</string>
    <string name="installed">Installed</string>
    <string name="canceling">Canceling</string>
    <string name="canceled">Canceled</string>
    <string name="network_error">Network error</string>
    <string name="invalid_request">Invalid request</string>
    <string name="module_unavailable">Module Unavailable</string>
</resources>
